# trace-analyzer

./: Cargo.toml  README.md  block_info.csv  index.html  package-lock.json  package.json  server.js  test.html
public/: index.html
public/js/: connectivity.js  data_usage.js  general.js  grandpa.js  network.js  sync.js  upload.js  utils.js
src/: block_height.rs  main.rs
